07-Healthcare-DevSecOps-Governance/infra/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthgov
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
